# rama-companies-house

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
src/rama/: __init__.py
src/rama/analysing/: __init__.py  differential_evolution.py  swapping.py  transfer_money.py
src/rama/processing/: cleaning.py  helper_functions.py  initialise_db.py  lists.py  load_database_pipeline.py  node_attributes.py  study_graphs.py
tests/: conftest.py  tests.py  tests_for_dfs.py
