[project]
name = "rama"
version = "0.1.0"
authors = [
    { name = "Leonardo C.G.", email = "leonardo_castro@ciencias.unam.mx" },
    {name = "LeonardoCastro", email = "lmcastrogonzalez@turing.ac.uk"},
]
description = "A Python package to clean, process and analyse Company House data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# classifiers = [
# ]
# dynamic = ["version"]
dependencies = [
    "networkx",
    "numpy",
    "pandas",
    "pendulum",
    "tqdm",
    "datetime",
    "mkdocs>=1.5.3",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
target-version = ['py310']


[tool.isort]
profile = "black"
lines_after_imports = 2


[tool.pylint]
max-line-length = 100


[tool.pylint.'MESSAGES CONTROL']
disable = ["logging-fstring-interpolation", "redefined-outer-name"]


[tool.mypy]
ignore_missing_imports = true


[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "build>=1.0.3",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "pylint>=3.0.2",
    "pytest>=7.4.3",
    "mypy>=1.7.0",
    "ipython>=8.17.2",
    "pyroma>=4.2",
    "pydocstyle>=6.3.0",
    "grip>=4.6.2",
]
